[package]
name = "fuelmint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5" }
clap = { version = "3.2", features = ["derive", "env"] }
tower-http = { version = "0.3", features = ["set-header", "trace"] }
async-graphql = { version = "4.0", features = ["tracing"], default-features = false }
anyhow = "1.0"
tendermint = { git = "https://github.com/penumbra-zone/tendermint-rs", branch = "penumbra-034" }
tendermint-proto = { git = "https://github.com/penumbra-zone/tendermint-rs", branch = "penumbra-034" }
structopt = "0.3.26"
bytes = "1"
tokio = { version = "1.21.1", features = ["full"]}
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio-stream = "0.1"
tower = { version = "0.4.13", features = ["full"]}
pin-project = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
prost = "0.9"
tower-abci = { git = "https://github.com/penumbra-zone/tower-abci/", branch = "penumbra-034" }
fuel-vm = "0.22.2"
fuel-core = { git = "https://github.com/FuelLabs/fuel-core", rev = "2301e15" }
fuel-core-types = { git = "https://github.com/FuelLabs/fuel-core", rev = "2301e15" }
fuel-core-storage = { git = "https://github.com/FuelLabs/fuel-core", rev = "2301e15" }
fuel-core-txpool = { git = "https://github.com/FuelLabs/fuel-core", rev = "2301e15" }
fuel-core-services = { git = "https://github.com/FuelLabs/fuel-core", rev = "2301e15" }
fuel-core-chain-config = { git = "https://github.com/FuelLabs/fuel-core", rev = "2301e15" }
fuel-core-executor = { git = "https://github.com/FuelLabs/fuel-core", rev = "2301e15" }
fuel-core-poa = { git = "https://github.com/FuelLabs/fuel-core", rev = "2301e15" }
strum = "0.24"
fuel-tx = "0.23.1"
lazy_static = "1.4"
hyper = { version = "0.14" }
serde_json = "1.0.82"
serde = { version = "1.0.138", features = ["derive"] }
eyre = "0.6.8"
async-trait = "0.1"
reqwest = "0.11.11"
itertools = "0.10"
hex = "0.4"
dirs = "4.0"
num_cpus = "1.13"