[package]
name = "fuelvm-abci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tendermint-proto = "0.24.0-pre.1"
tendermint = "0.24.0-pre.1"
structopt = "0.3.26"
bytes = "1"
tokio = { version = "1", features = ["full"]}
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = "0.1"
tower = { version = "0.4", features = ["full"]}
pin-project = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
prost = "0.9"
tower-abci = { git = "https://github.com/penumbra-zone/tower-abci/", branch = "penumbra-034" }
fuel-vm = "0.22.2"
fuel-core = "0.13.1"
fuels = "0.27.0"