[package]
name = "fuelvm-abci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tendermint = { git = "https://github.com/penumbra-zone/tendermint-rs", branch = "penumbra-034" }
tendermint-proto = { git = "https://github.com/penumbra-zone/tendermint-rs", branch = "penumbra-034" }
structopt = "0.3.26"
bytes = "1"
tokio = { version = "1.21.1", features = ["full"]}
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio-stream = "0.1"
tower = { version = "0.4.13", features = ["full"]}
pin-project = "1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
prost = "0.9"
tower-abci = { git = "https://github.com/penumbra-zone/tower-abci/", branch = "penumbra-034" }
fuel-vm = "0.22.2"
fuel-core = "0.14.1"
fuel-tx = "0.23.1"
fuel-core-interfaces = "0.14.1"
fuel-block-producer = "0.14.1"
serde_json = "1.0.82"
serde = { version = "1.0.138", features = ["derive"] }
eyre = "0.6.8"
async-trait = "0.1"